# Blitz-DFIR

./: .env.example  .gitignore  Blitz_DFIR_IMPLEMENTATION_CHECKLIST.md  GITHUB_PACKAGE_MANIFEST.md  LICENSE  NOTICE  One Source of Truth.md  README.md  THIRD_PARTY_LICENSES.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
blitz_dfir/: __init__.py  exceptions.py
config/: scoring.yaml  settings.yaml  tools.yaml
docs/: ACCURACY_REPORT.md  ADVERSARIAL_EVALUATION_PLAN.md  ADVERSARIAL_TEST_RESULTS_20260601.md  AGENT_EXECUTION_LOGS.md  ARCHITECTURE.md  Architecture And MCP Commands.md  CODE_UPDATE_TO_SIFT_20260601.md  DATASETS.md  DEMO_SCRIPT.md  EVIDENCE_MATURITY_UPGRADES.md  FINDING_REVIEW_20260531T203012Z.md  FIND_EVIL_TRUST_PROOF_PACKAGE.md  Helpful commands.md  JUDGE_LAYER_PROOF_CHECKLIST.md  JUDGE_QA.md  LLM Configurations.md  PROTOCOL_SIFT_INTEGRATION.md  REAL_CASE_WALKTHROUGH.md  REPEATABILITY_MATRIX.md  RUN_PROOF_SUMMARY_20260531T203012Z.md  SIFT_MIXED_EVIDENCE_RUNBOOK.md  SPOLIATION_TESTING.md  STABILITY_TESTING.md  SUBMISSION_CHECKLIST.md  TWO_WEEK_TEST_COMPLETION_PLAN.md  Ways to run Blitz DFIR.md  What's Next for Blitz DFIR.md  Where  to find Blitz DFIR generated results.md  Why use Blitz DFIR.md  evidences.txt  memory normalization error.md  memory_no_llm.md  ommon Issues
scripts/: blitz_agent_stack_preflight.sh  blitz_e2e_ollama_check.sh  blitz_llm_reasoning_summary.sh  blitz_monitor_until_done.sh  blitz_spoliation_demo.py  blitz_status.sh  blitz_stop_processes.sh  blitz_sync_to_sift_vm.ps1  blitz_vm_postrun_checks.sh  sift_e2e_ollama_run.sh  (+25 more)
(+216 files in other folders)
