[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz-dfir"
version = "0.1.0"
description = "Evidence-safe autonomous DFIR reasoning layer for Protocol SIFT."
authors = [{ name = "Rienart Ryan Ilagan" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "Jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_LICENSES.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
